--- a/doc/10.Database.md
+++ b/doc/10.Database.md
@@ -1,5 +1,5 @@
 ## Database
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 ### **1. What is a Collection in MongoDB?**
 
 In MongoDB, a **collection** is a grouping of MongoDB documents. It is roughly analogous to a table in relational databases. Each document in a collection is a set of key-value pairs, and each collection can contain documents of varying structures.
