--- a/doc/12.Mongo-db-connection.md
+++ b/doc/12.Mongo-db-connection.md
@@ -1,5 +1,5 @@
 ## Setting Up MongoDB Connection
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 To successfully connect your Dart application to a MongoDB database, you need to configure several settings in your `.env` file. Below are the necessary configurations and their explanations:
 
