--- a/doc/13.open-api-documentation.md
+++ b/doc/13.open-api-documentation.md
@@ -1,5 +1,5 @@
 ### Creating API Documentation Using the `ApiDoc` Class
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 In our project, we use the `ApiDoc` class to create documentation for the API endpoints in our routing system. This allows us to generate OpenAPI/Swagger-compliant documentation, making it easier for developers to understand and interact with our API.
 
