--- a/doc/2.Example-start-server.md
+++ b/doc/2.Example-start-server.md
@@ -1,5 +1,5 @@
 # WebApp Package: Example Server Setup
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 This documentation provides a step-by-step guide on how to set up and start a server using the WebApp package. The example code demonstrates how to configure a server, manage WebSocket connections, and define routing for both web and socket requests.
 
