--- a/doc/3.Routing.md
+++ b/doc/3.Routing.md
@@ -1,5 +1,5 @@
 # Routing Documentation for WebApp Package
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 This documentation provides an overview of the routing configuration used in the WebApp package example. The routing functions define the paths, methods, and controllers that handle incoming HTTP requests to the server.
 
