--- a/doc/4.Controllers.md
+++ b/doc/4.Controllers.md
@@ -1,5 +1,5 @@
 # Controller Development Guide for WebApp Package
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 This guide provides an overview of how to develop custom controllers for web applications using the WebApp package. By following this guide, developers can understand how to create and manage controllers, handle HTTP requests, validate data, and render responses.
 
