--- a/doc/5.Localization.md
+++ b/doc/5.Localization.md
@@ -1,5 +1,5 @@
 # Localization (i18n) in WebApp Package
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 Localization, or internationalization (i18n), is the process of adapting your web application to support multiple languages and regions. This guide explains how to set up localization in the WebApp package, including configuring language files and using translation functions in Dart code.
 
