--- a/doc/6.FormValidators.md
+++ b/doc/6.FormValidators.md
@@ -1,5 +1,5 @@
 # Form Validation and Widget Integration Documentation
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 This document explains how to use the `FormValidator` class for validating forms and how to integrate it into widgets for user input in a WebApp application. 
 
