--- a/doc/8.WebSocket.md
+++ b/doc/8.WebSocket.md
@@ -1,5 +1,5 @@
 ## Using WebSockets with the WebApp Package
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 ### Overview
 
