--- a/doc/9.CronJob.md
+++ b/doc/9.CronJob.md
@@ -1,5 +1,5 @@
 ### Using the `WaCron` Class for Scheduling Tasks
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 The `WaCron` class is a powerful tool for scheduling and managing tasks at specified intervals. Below are practical examples demonstrating how to use this class effectively in different scenarios.
 
