--- a/doc/7.jinja-template-engin.md
+++ b/doc/7.jinja-template-engin.md
@@ -1,5 +1,5 @@
 # Jinja Syntax Documentation for HTML Templates
-[Home documentation](/docs/README.md)
+[Home documentation](/doc/README.md)
 
 ## Overview
 
