--- a/doc/6.FormValidators.md
+++ b/doc/6.FormValidators.md
@@ -123,8 +123,8 @@ Here’s how to use the validated form data in an HTML widget:
     </span>
   </div>
   <? if loginResult != true and user == null ?>
-  <div class="card my-3">
-    <div class="card-body bg-light">
+  <div class="card my-3  bg-light">
+    <div class="card-body">
       <form method="post">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
